apps/base/envoy-gateway/network/gatewayclass.yaml
# yaml-language-server: $schema=https://ctrl-research.github.io/k8s-schemas/gateway.networking.k8s.io/gatewayclass_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: "gateway.envoyproxy.io/gatewayclass-controller"
